Fixed vertical alignment

--- a/style/styles.css
+++ b/style/styles.css
@@ -8,8 +8,8 @@
 
 #social img {
   height: 42px;
-  padding-left: 5px;
-  padding-right: 5px;
+  padding-left: 7.5px;
+  padding-right: 7.5px;
 }
 
 .grid {
@@ -28,6 +28,12 @@
 
 #right {
   grid-column: 2 / 2;
+}
+
+#left, #right {
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
 
 h1 {
